--- a/Views/Directory/Index.cshtml
+++ b/Views/Directory/Index.cshtml
@@ -60,9 +60,42 @@
                             <br />
                             <span class="_sign" style="font-size:12px;"></span>
                         </div>
+                        <div class="div_level_bar_wrap">
+                            <div class="div_level_bar">
+                                <span class="div_level_bar_cur_level">LV1</span>
+                                <div class="div_level_bar_containter">
+                                    <span>0/100</span>
+                                    <div class="div_level_bar_scroll"></div>
+                                </div>
+                                <span class="div_level_bar_nex_level">LV2</span>
+                            </div>
+                        </div>
+                        <div class="div_wallet_wrap">
+                            <div class="div_wallet_float_chongzhi orange_btn" onclick="layer.msg('暂未开启')">充值</div>
+                            <div style="color:#555;">钱包</div>
+                            <div style="margin-top:5px;">
+                                <span class="span_gold">金币&nbsp;&nbsp;0</span>
+                                <span class="span_siliver">银币&nbsp;&nbsp;0</span>
+                            </div>
+                        </div>
+                        <div class="div_task_wrap">
+                            <div class="div_task_wrap_top_line"></div>
+                            <div style="margin-left:13px;margin-right:13px;margin-top:5px;">
+                                <a style="display:none;float:right;" class="a_normal" href="/Personal/DailyTask">更多</a>
+                                <div style="color:#555;">每日任务</div>
+                                <div class="div_task_list">
+                                    @*<div class="div_task_list_item">
+                                            <span class="div_task_list_item_progress">0/1</span>
+                                            <span class="div_task_list_item_discribe">观看1次直播</span>
+                                            <span class="div_task_list_item_exp">(+20EXP)</span>
+                                        </div>*@
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
 
-                    @*<span id="_shuxian2" style="font-size: 16px;line-height: 50px;">|</span>*@
+
 
                 </div>
             </div>
@@ -129,7 +162,8 @@
                 {
                     <a class="div_romm_item" href="/Room/123">
                         <div class="div_room_item_cover">
-                            <img class="img_room_item_cover" src="~/upload/head8b848051-bd92-4674-bbdd-899dd6324c2b..jpg" />
+                            <img class="img_room_item_cover" src="~/upload/1546094467686.jpg" />
+                            @*<img class="img_room_item_cover" src="~/upload/head8b848051-bd92-4674-bbdd-899dd6324c2b..jpg" />*@
                             <div class="img_room_item_cover_mask"></div>
                             <img class="img_room_item_cover_mask_play" src="~/fonts/play-icon_a.png" />
                         </div>
@@ -247,6 +281,10 @@
             }
         }
 
+        function getNextExp(val) {
+            return parseInt(val) * 100;
+        }
+
         function resize() {
             $('.div_main_content_warp').css('margin-left',$('.left').width()+14+'px');
         }
@@ -314,6 +352,12 @@
                 }
             });
 
+            $('._group_user').hover(function () {
+                UpadteUserAsset();
+                GetDailyTask();
+            }, function () {
+
+            });
 
             if (user != '') {
                 ShowAfterLogin();
@@ -340,6 +384,52 @@
             });
         }
 
+        function UpadteUserAsset() {
+            //更新用户信息
+            $.post('/api/User/GetUserAsset', {}, function (res) {
+                if (res.success) {
+                    asset = res.data;
+                    SetUserAsset(asset);
+                }
+            });
+        }
+
+        function compleTask(id) {
+            $.post('/api/User/CompleteTask', { id: id }, function (res) {
+                if (res.success) {
+                    UpadteUserAsset();
+                    GetDailyTask();
+                } else {
+                    layer.msg(res.message);
+                }
+            });
+        }
+
+        function GetDailyTask() {
+            //获取每日任务
+            $.post('/api/User/GetDailyTask', {}, function (res) {
+                var data = res.data;
+                var str = '';
+                $.each(data, function (i, v) {
+                    if (v.currentCount >= v.totalCount) {
+                        if (v.isComplete) {
+                            str += '<div class="div_task_list_item"><span class="div_task_list_item_progress_received">';
+                            str += '已完成</span>';
+                        } else {
+                            str += '<div class="div_task_list_item"><span class="div_task_list_item_progress_complete" onclick="compleTask(' + v.id + ')">';
+                            str += '领取</span>';
+                        }
+                    } else {
+                        str += '<div class="div_task_list_item"><span class="div_task_list_item_progress">';
+                        str += v.currentCount + '/' + v.totalCount + '</span>';
+                    }
+                    str += '<span class="div_task_list_item_discribe">';
+                    str += v.discribe + '</span><span class="div_task_list_item_exp">(+' + v.exp + 'EXP)</span> </div>';
+                });
+                $('.div_task_list').empty().append($(str));
+            });
+        }
+
         function SetUserAsset(asset) {
             $('#a_user,.a_user').text(decode(user));
             var headIcon = asset.headIcon;
@@ -357,6 +447,16 @@
             } else {
                 $('._sign').empty().append($('<a class="_a_edit_sign" href="/Personal/EditInfo" >点击编辑个性签名</a>'));
             }
+            var exp = parseInt(asset.exp);
+            var level = asset.level;
+            var nextExp = getNextExp(level);
+            $('.div_level_bar_containter span').text(exp + '/' + nextExp);
+            $('.div_level_bar_cur_level').text('LV' + level);
+            $('.div_level_bar_nex_level').text('LV' + (parseInt(level) + 1));
+            $('.div_level_bar_scroll').css('width', (exp / nextExp) * 100 + '%');
+            $('.span_gold').html('金币&nbsp;&nbsp;' + parseInt(asset.gold));
+            $('.span_siliver').html('银币&nbsp;&nbsp;' + parseInt(asset.silver));
+
         }
 
         function ShowAfterLogin() {
