--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Entities;
+@{
     Layout = null;
 }
 <!DOCTYPE html>
@@ -16,13 +17,13 @@
     <link href="~/css/myStyle.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" style="background-color:rgba(255, 255, 255, 0.95);z-index:1000;">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(255, 255, 255);z-index:10000;">
         <div class="container" id="div_header_container">
             <div class="navbar-header">
                 <a class="navbar-brand nav-active" href="/"><span class="top_header_item">首页</span></a>
             </div>
             <div class="navbar-header">
-                <a class="navbar-brand" href="/Directory/0"><span class="top_header_item">直播</span></a>
+                <a class="navbar-brand " href="/Directory/0"><span class="top_header_item">直播</span></a>
             </div>
             <div class="navbar-header">
                 <a class="navbar-brand" href="/Class"><span class="top_header_item">分类</span></a>
@@ -42,15 +43,67 @@
                     <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
                 </div>
                 <div id="div_login_ed_panel" style="display:inline-block;display:none;">
-                    <img id="head_right_top" style="width:36px;height:36px;border-radius:18px;margin-right:2px;cursor:pointer;" onclick="location.href='/Personal'" src="@Html.Raw(ViewBag.UserAsset == null ? "" : ViewBag.UserAsset.HeadIcon)" />
-                    <a href="/Personal" class="a_rightTop" id="a_user"></a>
-                    <span id="_shuxian2" style="font-size: 16px;line-height: 50px;">|</span>
-                    <a href="javascript:;" class="a_rightTop" id="a_logout">注销</a>
+                    <div class="_group_user" style="display:inline-block;cursor:pointer; " onclick="location.href='/Personal'">
+                        <img class="head_right_top" style="width:36px;height:36px;border-radius:18px;margin-right:5px;cursor:pointer;" />
+                        <a href="/Personal" class="a_rightTop a_user"></a>
+                    </div>
+                    <div class="padnel_head_right_top">
+                        <div class="div_arrow"></div>
+                        <a href="javascript:;" class="a_log_out" id="a_logout"><div class="header-exit-icon"></div><span>退出</span></a>
+                        <div style="width:64px;height:64px;margin:10px auto 0 auto;">
+                            <img class="head_right_top" style="height:100%;width:100%;border-radius:32px;cursor:pointer;"
+                                 onclick="location.href='/Personal'" />
+                        </div>
+                        <div style="width:100%;text-align:center;">
+                            <span class="a_user" style="padding-left:5px;"></span>
+                            <span class="_sex" style="vertical-align:middle;"></span>
+                            <br />
+                            <span class="_sign" style="font-size:12px;"></span>
+                        </div>
+                        <div class="div_level_bar_wrap">
+                            <div class="div_level_bar">
+                                <span class="div_level_bar_cur_level">LV1</span>
+                                <div class="div_level_bar_containter">
+                                    <span>0/100</span>
+                                    <div class="div_level_bar_scroll"></div>
+                                </div>
+                                <span class="div_level_bar_nex_level">LV2</span>
+                            </div>
+                        </div>
+                        <div class="div_wallet_wrap">
+                            <div class="div_wallet_float_chongzhi orange_btn" onclick="layer.msg('暂未开启')">充值</div>
+                            <div style="color:#555;">钱包</div>
+                            <div style="margin-top:5px;">
+                                <span class="span_gold">金币&nbsp;&nbsp;0</span>
+                                <span class="span_siliver">银币&nbsp;&nbsp;0</span>
+                            </div>
+                        </div>
+                        <div class="div_task_wrap">
+                            <div class="div_task_wrap_top_line"></div>
+                            <div style="margin-left:13px;margin-right:13px;margin-top:5px;">
+                                <a style="display:none;float:right;" class="a_normal" href="/Personal/DailyTask">更多</a>
+                                <div style="color:#555;">每日任务</div>
+                                <div class="div_task_list">
+                                    @*<div class="div_task_list_item">
+                                            <span class="div_task_list_item_progress">0/1</span>
+                                            <span class="div_task_list_item_discribe">观看1次直播</span>
+                                            <span class="div_task_list_item_exp">(+20EXP)</span>
+                                        </div>*@
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
     </nav>
 
+
+    
 
     <div style="display:none;" id="divLoginAndReg">
         <div style="text-align:center;display:none;width:92%;margin:10px auto 0 auto;" id="divReg">
@@ -110,16 +163,24 @@
     </div>
     <script type="text/javascript">
 
-        var user = '@ViewBag.User';
-        user = unescape(user.replace(/&#x/g, '%u').replace(/;/g, ''));
+        var user = '@Html.Raw(ViewBag.User)';
+        //user = unescape(user.replace(/&#x/g, '%u').replace(/;/g, ''));
 
-        var asset = '@ViewBag.UserAssetJson';
+
+        function decode(val) {
+            if (val != null)
+                return val.replace(/&#x/g, '%u').replace(/;/g, '');
+            return '';
+        }
+
+        var asset = '@Html.Raw(ViewBag.UserAssetJson)';
 
         if (asset != 'null') {
-            asset = JSON.parse(asset.replace(/&quot;/gi, '"'));
+            asset = JSON.parse(asset);
         } else {
             asset = null;
         }
+
 
         function getStyle(obj, styleName) {
             if (obj.currentStyle) { return obj.currentStyle[styleName]; } else {
@@ -139,6 +200,14 @@
                     return 0;
                     break;
             }
+        }
+
+        function getNextExp(val) {
+            return parseInt(val) * 100;
+        }
+
+        function resize() {
+            //$('.div_main_content_warp').css('margin-left',$('.left').width()+14+'px');
         }
 
         $(function () {
@@ -182,15 +251,16 @@
                 $('.Aside-toggle-Expand,.left_expand').hide();
                 $('.Aside-toggle-Shark,.left_shark').show();
                 $('.left').css('width', '0');
-                //resize();
+                resize&&resize();
             });
 
             $('.Aside-toggle-Shark').off('click').on('click', function (e) {
                 $('.Aside-toggle-Expand,.left_expand').show();
                 $('.Aside-toggle-Shark,.left_shark').hide();
                 $('.left').css('width', '240px');
-                //resize();
+                resize && resize();
             });
+
 
 
             $('.header-search-btn ').click(function () {
@@ -203,41 +273,21 @@
                 }
             });
 
-            $('.btnUploadHead').click(function () {
-                $('[name=file]').click();
-            });
-            $('[name=file]').on('change', function () {
-                doUploadHead();
+            $('._group_user').hover(function () {
+                UpadteUserAsset();
+                GetDailyTask();
+            }, function () {
+
             });
 
             if (user != '') {
                 ShowAfterLogin();
             }
-            $('#right_top_float').show();
-        });
 
-        function doUploadHead() {
-            var formData = new FormData($("#uploadForm")[0]);
-            //console.log(formData);
-            $.ajax({
-                url: '../api/Personal/UploadHead',
-                type: 'POST',
-                data: formData,
-                async: false,
-                cache: false,
-                contentType: false,
-                processData: false,
-                success: function (res) {
-                    asset.HeadIcon = res.data;
-                    $('#head_right_top').attr('src', res.data);
-                    $('#img_head_icon').attr('src', res.data);
-                    layer.msg('修改成功');
-                },
-                error: function (res) {
-                    layer.msg(res.message);
-                }
-            });
-        }
+            $('#right_top_float').show();
+
+            resize && resize();
+        });
 
         function Login(username , pwd ,code) {
             $.post('../api/User/Login', {
@@ -246,26 +296,97 @@
             }, function(res) {
                 if (res.success) {
                     layer.closeAll();
-                    $('#imgCode').click();
                     user = res.data[0].userName;
                     asset = res.data[1];
-                    $('#head_right_top').attr('src', asset.headIcon);
                     ShowAfterLogin();
                 } else {
                     layer.msg(res.message);
-                    $('#imgCode').click();
                 }
             });
         }
 
+        function UpadteUserAsset() {
+            //更新用户信息
+            $.post('/api/User/GetUserAsset', {}, function (res) {
+                if (res.success) {
+                    asset = res.data;
+                    SetUserAsset(asset);
+                }
+            });
+        }
+
+        function compleTask(id) {
+            $.post('/api/User/CompleteTask', { id: id }, function (res) {
+                if (res.success) {
+                    UpadteUserAsset();
+                    GetDailyTask();
+                } else {
+                    layer.msg(res.message);
+                }
+            });
+        }
+
+        function GetDailyTask() {
+            //获取每日任务
+            $.post('/api/User/GetDailyTask', {}, function (res) {
+                var data = res.data;
+                var str = '';
+                $.each(data, function (i, v) {
+                    if (v.currentCount >= v.totalCount) {
+                        if (v.isComplete) {
+                            str += '<div class="div_task_list_item"><span class="div_task_list_item_progress_received">';
+                            str += '已完成</span>';
+                        } else {
+                            str += '<div class="div_task_list_item"><span class="div_task_list_item_progress_complete" onclick="compleTask(' + v.id + ')">';
+                            str += '领取</span>';
+                        }
+                    } else {
+                        str += '<div class="div_task_list_item"><span class="div_task_list_item_progress">';
+                        str += v.currentCount + '/' + v.totalCount + '</span>';
+                    }
+                    str += '<span class="div_task_list_item_discribe">';
+                    str += v.discribe + '</span><span class="div_task_list_item_exp">(+' + v.exp + 'EXP)</span> </div>';
+                });
+                $('.div_task_list').empty().append($(str));
+            });
+        }
+
+        function SetUserAsset(asset) {
+            $('#a_user,.a_user').text(decode(user));
+            var headIcon = asset.headIcon;
+            $('.head_right_top').each(function (i, o) {
+                $(this).attr('src', headIcon );
+            });
+            var sex = asset.sex;
+            if (sex == "男") {
+                $('._sex').removeClass("personal_female").addClass("personal_male");
+            } else {
+                $('._sex').removeClass("personal_male").addClass("personal_female");
+            }
+            if (asset.sign) {
+                $('._sign').empty().text(asset.sign);
+            } else {
+                $('._sign').empty().append($('<a class="_a_edit_sign" href="/Personal/EditInfo" >点击编辑个性签名</a>'));
+            }
+            var exp = parseInt(asset.exp);
+            var level = asset.level;
+            var nextExp = getNextExp(level);
+            $('.div_level_bar_containter span').text(exp + '/' + nextExp);
+            $('.div_level_bar_cur_level').text('LV' + level);
+            $('.div_level_bar_nex_level').text('LV' + (parseInt(level) + 1));
+            $('.div_level_bar_scroll').css('width', (exp / nextExp) * 100 + '%');
+            $('.span_gold').html('金币&nbsp;&nbsp;' + parseInt(asset.gold));
+            $('.span_siliver').html('银币&nbsp;&nbsp;' + parseInt(asset.silver));
+
+        }
+
         function ShowAfterLogin() {
             $('#div_login_panel').hide();
-            $('#a_user').text(user);
+            SetUserAsset(asset);
             $('#div_login_ed_panel').show();
             $("#a_logout").show().off('click').on('click', function () {
                 $.post('../api/User/LogOut', {}, function (res) {
                     if (res.success) {
-                        window.location.href = "/";
                         $('#div_login_panel').show();
                         $('#div_login_ed_panel').hide();
                         user = '';
@@ -283,14 +404,12 @@
             $('#validCode').val('');
             $('#divReg').hide();
             $('#divLogin').show();
+            $('#imgCode').click();
             layer.open({
                 type: 1,
                 title: '登录',
                 content: $('#divLoginAndReg'),
-                area: ['420px', '260px'],
-                cancel: function () {
-                    $('#imgCode').click();
-                }
+                area: ['420px', '260px']
 
             });
         }
@@ -309,6 +428,7 @@
 
             });
         }
+
     </script>
 
 
