--- a/Views/Personal/EditInfo.cshtml
+++ b/Views/Personal/EditInfo.cshtml
@@ -116,6 +116,11 @@
                         编辑资料
                     </a>
                 </div>
+                <div class="left-nav-item ">
+                    <a href="/Personal/ChangePWD">
+                        修改密码
+                    </a>
+                </div>
             </div>
             <div style="margin-left:180px;position:relative;">
 
