--- a/Views/Personal/Index.cshtml
+++ b/Views/Personal/Index.cshtml
@@ -113,6 +113,11 @@
                         编辑资料
                     </a>
                 </div>
+                <div class="left-nav-item ">
+                    <a href="/Personal/ChangePWD">
+                        修改密码
+                    </a>
+                </div>
             </div>
             <div style="margin-left:180px;position:relative;">
 
@@ -172,7 +177,7 @@
                         <div style="font-weight:700;font-size:14px;">
                             账号管理
                         </div>
-                        <div class="div_task_wrap_top_line" style="width:79%;margin-top:10px;margin-left:-10px;"></div>
+                        <div class="div_task_wrap_top_line" style="width:98%;margin-top:10px;margin-left:-10px;"></div>
                         <div class="div_account_manager_list">
                             <div class="div_account_manager_item" onclick="window.location.href='/Personal/ChangePWD'">修改密码</div>
                             <div class="div_account_manager_item">成为主播</div>
