--- a/Views/Personal/Index.cshtml
+++ b/Views/Personal/Index.cshtml
@@ -136,7 +136,7 @@
                     <div style="float:left;margin-left:10px;">
                         <div>
                             <span class="personal_username">
-                                @ViewBag.User
+                                @ViewBag.UserAsset.NickName
                             </span>
                             <span class="@Html.Raw(ViewBag.UserAsset.Sex == "男" ? "personal_male" : "personal_female")"></span>
                         </div>
@@ -417,7 +417,7 @@
         }
 
         function SetUserAsset(asset) {
-            $('#a_user,.a_user').text(decode(user));
+            $('#a_user,.a_user').text(asset.nickName);
             var headIcon = asset.headIcon;
             $('.head_right_top').each(function (i, o) {
                 $(this).attr('src', headIcon);
