--- a/Views/Personal/EditInfo.cshtml
+++ b/Views/Personal/EditInfo.cshtml
@@ -121,6 +121,11 @@
                         修改密码
                     </a>
                 </div>
+                <div class="left-nav-item  ">
+                    <a href="/Anchor">
+                        直播设置
+                    </a>
+                </div>
             </div>
             <div style="margin-left:180px;position:relative;">
 
